<resources>
    <string name="app_name">Au Feu Les Pompiers</string>
    <string name="not_authenticated">Non authentifié</string>
    <string name="user_icon">icone de compte utilisateur</string>
    <string name="statement_history">Historique du beacon</string>
    <string name="alerts_to_be_processed">Alertes à traiter</string>
    <string name="additional_information">Informations supplémentaires</string>
    <string name="no_alerts_to_process">Aucune alerte à traiter</string>
    <string name="titled">titled</string>
    <string name="date">date</string>
    <string name="temperature">Temperature :</string>
    <string name="random_hot_temp">43.5°C</string>
    <string name="distance">distance</string>
    <string name="no_statement">Aucun relevé</string>
    <string name="alert_traited">Traiter l\'alerte</string>
    <string name="take_alert">Sélectionner une alerte</string>
    <string name="take_alert_in_charge">Je prends en charge l\'alerte</string>
    <string name="manage_alert">Je gère l\'alerte</string>
    <string name="go_to_alert_page">Page alerte</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoid3JvbmdqdWljZSIsImEiOiJja2xiajk3aHYwZm41MnBzNHpsbWZkZDNlIn0.ehH9r8d1OoVfwB5je_pnGA</string>
    <string name="user_location_permission_explanation">Localization authorization needed.</string>
    <string name="user_location_permission_not_granted">You have not granted location authorization.</string>
    <string name="sensor_title">inituléBalise</string>
    <string name="statement_hour">Heure de la mesure :</string>
    <string name="statement_hour_example">12:36</string>
    <string name="coordinates">Coordonnées GPS :</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="latitude_example">48.862725</string>
    <string name="longitude_example">2.287592</string>
    <string name="attributed_to">Attribué à : </string>
    <string name="someone">personne</string>
    <string name="statement_status">En cours de traitement</string>
    <string name="back_to_map">Retour à la carte</string>
    <string name="treated_by">"Traité par"</string>
</resources>