<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:onClick="backToMap"
        android:id="@+id/back"
        android:paddingStart="0dp"
        android:paddingEnd="80dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/teal_700">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back_to_map"
            android:id="@+id/back_to_activities_list"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_toEndOf="@+id/back_to_activities_list"
            android:textColor="@color/design_default_color_on_primary"
            android:text="@string/back_to_map"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/back"
        android:text="@string/statement_status"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@color/in_progress"
        android:textSize="22sp"
        android:textColor="@color/design_default_color_on_primary"
        android:id="@+id/statement_status"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_title"
        android:layout_below="@+id/statement_status"
        android:textAlignment="center"
        android:textSize="17sp"
        android:layout_margin="10dp"
        android:textColor="@color/teal_700"
        android:id="@+id/sensor_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sensor_title"
        android:id="@+id/statement_hour_part">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statement_hour"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statement_hour_example"
            android:layout_margin="15dp"
            android:id="@+id/statement_hour"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statement_hour_part"
        android:id="@+id/temperature_part">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_hot_temp"
            android:layout_margin="15dp"
            android:id="@+id/temperature"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature_part"
        android:paddingBottom="15dp"
        android:id="@+id/coordinates_part">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinates"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/coordinates"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coordinates"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:id="@+id/latitude"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude_example"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/latitude_example"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:id="@+id/longitude"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude_example"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/longitude_example"/>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coordinates_part">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attributed_to"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/someone"
            android:layout_margin="15dp"
            android:id="@+id/someone"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_traited"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:id="@+id/treat_alert"/>


</RelativeLayout>