<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/alert_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:text="@string/titled"
            android:id="@+id/titled"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textAlignment="viewEnd"
            android:paddingEnd="20dp"
            android:paddingTop="8dp"
            android:paddingStart="20dp"
            android:text="@string/date"
            android:id="@+id/date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:paddingEnd="5dp"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:text="@string/temperature"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:paddingEnd="20dp"
            android:paddingStart="0dp"
            android:paddingTop="8dp"
            android:text="@string/random_hot_temp"
            android:id="@+id/temperature"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textAlignment="viewEnd"
            android:paddingEnd="20dp"
            android:paddingTop="8dp"
            android:paddingStart="20dp"
            android:text="@string/distance"
            android:id="@+id/distance"/>

    </LinearLayout>

</LinearLayout>